--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -58,7 +58,6 @@
     <color name="add_to_homescreen_icon_background">#4C0074</color>
 
     <color name="firefoxInstallHint">@color/photonMagenta70</color>
-
     <color name="preference_row_selected">#414146</color>
     <color name="preference_row_disabled">#B3313131</color>
 
@@ -69,6 +68,7 @@
     <color name="ink70">#474959</color>
     <color name="ink80">#333540</color>
     <color name="homeUrlBarBackground">#30ffffff</color>
+    <color name="default_background_gray">#e3e3e5</color>
 
     <color name="onboarding_background">#ffffff</color>
     <color name="onboarding_overlay">#cc000000</color>
