Addresses nits in #527

--- a/app/src/main/res/drawable/pointer.xml
+++ b/app/src/main/res/drawable/pointer.xml
@@ -1,3 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<!-- This Source Code Form is subject to the terms of the Mozilla Public
+   - License, v. 2.0. If a copy of the MPL was not distributed with this
+   - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
+
 <vector android:height="24dp" android:viewportHeight="72.0"
     android:viewportWidth="72.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#231f20" android:pathData="M42.98,70.65a2.95,2.95 0,0 1,-2.71 -1.78L20.24,24.2a2.94,2.94 0,0 1,0.21 -2.85A2.98,2.98 0,0 1,24.2 20.24L68.88,40.26A3,3 0,0 1,67.65 46H47a1,1 0,0 0,-1 1V67.65A2.98,2.98 0,0 1,42.98 70.65Z"/>
