--- a/app/src/main/res/drawable/pin_selector.xml
+++ b/app/src/main/res/drawable/pin_selector.xml
@@ -5,6 +5,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true"
         android:drawable="@drawable/pin_filled"/>
-    <item android:state_checked="false"
-        android:drawable="@drawable/pin_unfilled"/>
+    <item android:drawable="@drawable/pin_unfilled"/>
 </selector>
