--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -102,7 +102,7 @@
             android:drawableStart="@drawable/ic_wide_menu"
             android:drawablePadding="5dp"
             android:text="@string/nav_close_hint"
-            android:textColor="@color/button_default" />
+            android:textColor="@color/nav_close_hint" />
     </LinearLayout>
 
 </LinearLayout>
