--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -104,6 +104,6 @@
         <item name="android:layout_marginEnd">24dp</item>
         <item name="android:padding">12dp</item>
         <item name="android:background">@drawable/navigation_button_background</item>
-        <item name="android:tint">@android:color/black</item>
+        <item name="android:tint">@android:color/white</item>
     </style>
 </resources>
