--- a/app/src/main/res/drawable/nav_urlbar_background.xml
+++ b/app/src/main/res/drawable/nav_urlbar_background.xml
@@ -6,5 +6,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="@dimen/home_tile_corner_radius"/>
-    <solid android:color="@color/overlay_button_selector" />
+    <solid android:color="@android:color/black" />
+    <stroke android:color="@color/overlay_button_selector" android:width="4dp" />
 </shape>
