--- a/app/src/main/res/drawable/circle_button_background.xml
+++ b/app/src/main/res/drawable/circle_button_background.xml
@@ -9,5 +9,6 @@
         android:height="40dp"
         android:width="40dp" />
     <solid android:color="@color/overlay_button_selector" />
-    <stroke android:color="@color/overlay_button_border" android:width="0.5dp" />
+    <stroke android:color="@color/overlay_button_border"
+        android:width="0.5dp" />
 </shape>
