--- a/app/src/main/res/drawable/nav_urlbar_background.xml
+++ b/app/src/main/res/drawable/nav_urlbar_background.xml
@@ -5,7 +5,8 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="@dimen/home_tile_corner_radius"/>
+    <corners android:radius="@dimen/urlbar_corner_radius"/>
     <solid android:color="@android:color/black" />
-    <stroke android:color="@color/overlay_button_selector" android:width="4dp" />
+    <stroke android:color="@color/overlay_button_selector"
+        android:width="4dp" />
 </shape>
