--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,6 +43,7 @@
     <dimen name="textinputlayout_spacing">8dp</dimen>
 
     <dimen name="home_tile_corner_radius">4dp</dimen>
+    <dimen name="urlbar_corner_radius">4dp</dimen>
 
     <dimen name="fab_margin">16dp</dimen>
 
