Closes #551 - Add pin icon accessibility string

--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             style="@style/NavigationButton"
             android:src="@drawable/pin_selector"
-            android:contentDescription=""/>
+            android:contentDescription="@string/pin_label"/>
 
         <org.mozilla.focus.widget.CheckableImageButton
             android:id="@+id/turboButton"
