--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -53,6 +53,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:focusable="false"
+        android:descendantFocusability="blocksDescendants"
         />
 
     <org.mozilla.focus.widget.BrowserNavigationOverlay
