Fixes #564 - Updates the colors for the button states

--- a/app/src/main/res/color/urlbar_border_default.xml
+++ b/app/src/main/res/color/urlbar_border_default.xml
@@ -4,7 +4,6 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:color="@color/button_pressed" />
-    <item android:state_focused="true" android:color="@color/button_focused" />
-    <item android:color="@color/button_border"/>
+    <item android:state_focused="true" android:color="@android:color/transparent" />
+    <item android:color="@color/translucent_tv_gray40"/>
 </selector>
