--- a/app/src/main/res/color/overlay_button_selector.xml
+++ b/app/src/main/res/color/overlay_button_selector.xml
@@ -7,6 +7,6 @@
     <item android:state_enabled="false" android:color="@color/button_disabled"/>
     <item android:state_pressed="true" android:color="@color/button_pressed" />
     <item android:state_focused="true" android:color="@color/button_focused" />
-    <item android:state_checked="true" android:color="@color/button_pressed"/>
+    <item android:state_checked="true" android:color="@color/button_checked"/>
     <item android:color="@color/button_default"/>
 </selector>
