--- a/app/src/main/res/color/urlbar_border_focused.xml
+++ b/app/src/main/res/color/urlbar_border_focused.xml
@@ -4,7 +4,7 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:color="@color/button_pressed" />
-    <item android:state_focused="true" android:color="@color/button_focused" />
-    <item android:color="@color/button_border"/>
+    <item android:state_pressed="true" android:color="@color/tv_blue60" />
+    <item android:state_focused="true" android:color="@color/tv_blue50" />
+    <item android:color="@color/tv_ink"/>
 </selector>
