--- a/app/src/main/res/drawable/nav_urlbar_background.xml
+++ b/app/src/main/res/drawable/nav_urlbar_background.xml
@@ -2,11 +2,26 @@
 <!-- This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="@dimen/urlbar_corner_radius"/>
-    <solid android:color="@android:color/black" />
-    <stroke android:color="@color/overlay_button_selector"
-        android:width="4dp" />
-</shape>
+
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_focused="true">
+        <shape
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <corners android:radius="@dimen/urlbar_corner_radius"/>
+            <solid android:color="@color/translucent_tv_ink" />
+            <stroke android:color="@color/urlbar_border_focused"
+                android:width="4dp" />
+        </shape>
+    </item>
+    <item>
+        <shape
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <corners android:radius="@dimen/urlbar_corner_radius"/>
+            <solid android:color="@color/translucent_tv_ink" />
+            <stroke android:color="@color/urlbar_border_default"
+                android:width="0.5dp" />
+        </shape>
+    </item>
+</selector>
