--- a/app/src/main/res/values/tv_colors.xml
+++ b/app/src/main/res/values/tv_colors.xml
@@ -5,8 +5,12 @@
 
 <resources>
     <color name="tv_white">#eeeeee</color>
+    <color name="tv_gray40">#b1b1b3</color>
+    <color name="translucent_tv_gray40">#33b1b1b3</color>
     <color name="tv_blue50">@color/photonBlue50</color>
     <color name="tv_blue60">@color/photonBlue60</color>
     <color name="tv_ink">#0c0c15</color>
+    <color name="translucent_tv_ink">#cc0c0c15</color>
     <color name="tv_ink2">#282938</color>
+    <color name="translucent_tv_ink2">#cc282938</color>
 </resources>
