--- a/app/src/main/res/drawable/progress_bar_background.xml
+++ b/app/src/main/res/drawable/progress_bar_background.xml
@@ -3,6 +3,6 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#E3E3E5"/>
+    <solid android:color="#D9E3E3E5"/>
     <corners android:radius="@dimen/home_tile_corner_radius"/>
 </shape>
