--- a/app/src/main/res/drawable/context_menu_button_background.xml
+++ b/app/src/main/res/drawable/context_menu_button_background.xml
@@ -2,10 +2,16 @@
 <!-- This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="@color/default_background_gray" />
-    <stroke android:color="@color/overlay_button_border"
-        android:width="0.5dp" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape android:shape="oval">
+            <solid android:color="#5b5b5c" />
+        </shape>
+    </item>
+
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="@color/default_background_gray" />
+        </shape>
+    </item>
+</selector>
