--- a/app/src/main/res/layout/home_tile.xml
+++ b/app/src/main/res/layout/home_tile.xml
@@ -8,7 +8,6 @@
               android:layout_width="140dp"
               android:layout_height="100dp"
               android:background="@drawable/home_tile_background"
-              android:foreground="@drawable/home_tile_selector"
               android:focusable="true"
               android:clickable="true"
               android:clipChildren="false"
@@ -27,7 +26,8 @@
         android:elevation="4dp"
         android:padding="4dp"
         android:src="@drawable/ic_wide_menu_home"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:duplicateParentState="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,4 +59,15 @@
             android:textColor="@android:color/black"
             tools:text="YouTube" />
     </LinearLayout>
+
+    <!--
+        #596: Moves the interaction effects out of android:foreground.
+        This needed to be above the tile_icon to be able provide a tint
+        to the whole tile. But below the menu_icon.
+    -->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/home_tile_selector"
+        android:duplicateParentState="true" />
 </FrameLayout>
