--- a/app/src/main/res/layout/home_tile.xml
+++ b/app/src/main/res/layout/home_tile.xml
@@ -34,11 +34,11 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <!-- margins are defined in HomeFragment.kt -->
         <ImageView
             android:id="@+id/tile_icon"
-            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="8dp"
+            android:layout_width="match_parent"
             android:layout_weight="1"
             android:scaleType="centerInside"
             tools:ignore="ContentDescription"
