--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -51,6 +51,8 @@
     <dimen name="remote_cursor_size2x">90dp</dimen>
 
     <dimen name="button_size">48dp</dimen>
+    <dimen name="bundled_home_tile_margin_value">8dp</dimen>
+    <dimen name="custom_home_tile_margin_value">5dp</dimen>
 
     <!-- We want to keep button_size and urlbar height the same to keep them aligned -->
     <dimen name="urlbar_height">@dimen/button_size</dimen>
