Closes #623: Polish: screenshot placeholder size

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,6 +17,8 @@
     <!-- Specified in AdaptiveIconDrawable docs. -->
 
     <dimen name="home_tile_corner_radius">4dp</dimen>
+    <dimen name="home_tile_placeholder_corner_radius">12dp</dimen>
+    <dimen name="home_tile_placeholder_icon_size">50dp</dimen>
     <dimen name="urlbar_corner_radius">4dp</dimen>
 
     <dimen name="remote_cursor_size">45dp</dimen>
@@ -28,8 +30,4 @@
     <!-- We want to keep button_size and urlbar height the same to keep them aligned -->
     <dimen name="urlbar_height">@dimen/button_size</dimen>
 
-    <!-- In HomeTileScreenshotStore, we generate screenshots of this size and scale them:
-         it should be a fine estimate for now. -->
-    <dimen name="home_tile_icon_estimated_width">480px</dimen>
-    <dimen name="home_tile_icon_estimated_height">270px</dimen>
 </resources>
