--- a/app/src/main/res/values/tv_colors.xml
+++ b/app/src/main/res/values/tv_colors.xml
@@ -3,15 +3,15 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
-<resources>
-    <color name="tv_white">#eeeeee</color>
-    <color name="tv_gray2">#a0a0a3</color>
-    <color name="tv_gray40">#b1b1b3</color>
-    <color name="translucent_tv_gray40">#33b1b1b3</color>
-    <color name="tv_blue50">@color/photonBlue50</color>
-    <color name="tv_blue60">@color/photonBlue60</color>
-    <color name="tv_ink">#0c0c15</color>
-    <color name="translucent_tv_ink">#cc0c0c15</color>
-    <color name="tv_ink2">#282938</color>
-    <color name="translucent_tv_ink2">#cc282938</color>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <color name="tv_white" tools:keep="@color/tv_white">#eeeeee</color>
+    <color name="tv_gray2" tools:keep="@color/tv_gray2">#a0a0a3</color>
+    <color name="tv_gray40" tools:keep="@color/tv_gray40">#b1b1b3</color>
+    <color name="translucent_tv_gray40" tools:keep="@color/translucent_tv_gray40">#33b1b1b3</color>
+    <color name="tv_blue50" tools:keep="@color/tv_blue50">@color/photonBlue50</color>
+    <color name="tv_blue60" tools:keep="@color/tv_blue60">@color/photonBlue60</color>
+    <color name="tv_ink" tools:keep="@color/tv_ink">#0c0c15</color>
+    <color name="translucent_tv_ink" tools:keep="@color/translucent_tv_ink">#cc0c0c15</color>
+    <color name="tv_ink2" tools:keep="@color/tv_ink2">#282938</color>
+    <color name="translucent_tv_ink2" tools:keep="@color/translucent_tv_ink2">#cc282938</color>
 </resources>
