--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,13 +2,4 @@
 <!-- This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
-<resources>
-    <item name="share" type="id" />
-    <item name="settings" type="id" />
-    <item name="open_default" type="id" />
-    <item name="open_select_browser" type="id" />
-    <item name="custom_tab_menu_item" type="id" />
-    <item name="add_to_homescreen" type="id" />
-    <item name="help" type="id" />
-    <item name="whats_new" type="id" />
-</resources>
+<resources></resources>
