--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.mozilla.focus.activity.OnboardingActivity">
+    tools:context="org.mozilla.focus.OnboardingActivity">
 
     <include
         layout="@layout/content_onboarding"
