Closes #634: With > 1 page of home tiles, sometimes cursor disappears when scrolling down

--- a/app/src/main/res/layout/home_tile.xml
+++ b/app/src/main/res/layout/home_tile.xml
@@ -4,6 +4,7 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
+              android:id="@+id/home_tile"
               android:orientation="vertical"
               android:layout_width="140dp"
               android:layout_height="100dp"
