--- a/app/src/main/res/layout/firefox_progress_bar.xml
+++ b/app/src/main/res/layout/firefox_progress_bar.xml
@@ -10,12 +10,13 @@
     android:background="@drawable/progress_bar_background"
     android:layout_margin="15dp">
 
-    <org.mozilla.focus.utils.GifImageView
-        android:id="@+id/gifImageView"
-        android:alpha="0.85"
+    <ImageView
+        android:id="@+id/progressAnimation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:alpha="0.85"
+        android:background="@drawable/progress_loading_indicator"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"/>
 
