Closes #641: Add settings button pressed state.
I opted to remove the ripple because:
- The ripple changes the color that we set (because it adds
transparency), meaning I can't get the colors Tif specified
- The ripple doesn't work on the diamond but works on the stick, meaning
they have different colors for focused and pressed ^

For such this detail, I figured this is good enough and we we can re-add the
ripple and fix it in #648.

--- a/app/src/main/res/drawable/home_settings_button_background.xml
+++ b/app/src/main/res/drawable/home_settings_button_background.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <ripple android:color="@color/button_highlight">
-            <item android:id="@android:id/mask">
-                <shape android:shape="oval">
-                    <solid android:color="@android:color/black" />
-                </shape>
-            </item>
-        </ripple>
-    </item>
-</layer-list>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+
+    <size
+        android:height="40dp"
+        android:width="40dp"/>
+
+    <solid
+        android:color="@color/home_settings_button_background_color"/>
+
+</shape>
