Closes #489: Draw cursor in XML.
Now that we're not dynamically generating the assets, we can simplify
with XML.

--- a/app/src/main/res/layout/fragment_browser.xml
+++ b/app/src/main/res/layout/fragment_browser.xml
@@ -46,6 +46,8 @@
         android:layout_width="@dimen/remote_cursor_size"
         android:layout_height="@dimen/remote_cursor_size"
         android:layout_gravity="top|start"
+        android:src="@drawable/cursor_full"
+        android:scaleType="centerInside"
         />
 
     <org.mozilla.focus.browser.FirefoxProgressBar
