Issue #761: Scale video feed items when focused.
Specs are still non-final.

--- a/app/src/main/res/layout/pocket_video_item.xml
+++ b/app/src/main/res/layout/pocket_video_item.xml
@@ -13,6 +13,7 @@
     app:cardCornerRadius="4dp"
     app:cardElevation="0dp"
     android:focusable="true"
+    android:stateListAnimator="@animator/pocket_video_item"
     >
 
     <LinearLayout
