--- a/app/src/main/res/layout/fragment_pocket_video.xml
+++ b/app/src/main/res/layout/fragment_pocket_video.xml
@@ -9,13 +9,20 @@
     android:layout_height="match_parent"
     android:background="#313135">
 
+    <!-- We need to make this view larger than its children to allow the children to scale when
+         focused (clipChildren alone doesn't work) so we add vertical padding and center gravity. -->
     <android.support.v17.leanback.widget.ListRowView
         android:id="@+id/videoFeed"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
         android:paddingStart="24dp"
         android:paddingEnd="24dp"
+        android:gravity="center_vertical"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
