--- a/app/src/main/res/layout/home_tile.xml
+++ b/app/src/main/res/layout/home_tile.xml
@@ -35,7 +35,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!-- margins are defined in HomeFragment.kt -->
+        <!-- margins are defined in HomeTileRecyclerView.setLayoutMarginParams -->
         <ImageView
             android:id="@+id/tile_icon"
             android:layout_height="0dp"
