Closes #768: Edited browser overlay xml to take care of nested layout weight

--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -74,8 +74,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical">
 
         <!-- Drawable tinted in code (XML needs API 23+). -->
