--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,4 +40,7 @@
 
     <color name="white_a10p">#1AFFFFFF</color>
     <color name="white_a20p">#33FFFFFF</color>
+
+    <!-- via https://github.com/mozilla-mobile/firefox-tv/issues/759#issuecomment-381702769 -->
+    <color name="pocket_coral">#EF4056</color>
 </resources>
