--- a/app/src/main/res/layout/fragment_pocket_video.xml
+++ b/app/src/main/res/layout/fragment_pocket_video.xml
@@ -64,12 +64,13 @@
         android:id="@+id/recommendedTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="48dp"
-        android:text="Recommended"
-        android:textColor="@color/tv_white"
-        android:textSize="14sp"
-        android:textStyle="bold"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="50dp"
+        android:text="@string/pocket_video_feed_recommended_videos_title"
+        android:textColor="@color/photonGrey10"
+        android:textSize="20sp"
+        android:fontFamily="@string/font_roboto_medium"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/headerBackgroundView" />
+
 </android.support.constraint.ConstraintLayout>
